--- a/Pandas_Activité.ipynb
+++ b/Pandas_Activité.ipynb
@@ -4422,214 +4422,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code_zone_(fao)</th>\n",
-       "      <th>zone</th>\n",
-       "      <th>année</th>\n",
-       "      <th>population</th>\n",
-       "      <th>disponibilité_de_protéines_en_g/population/jour</th>\n",
-       "      <th>disponibilité_de_protéines_en_kg/population/an</th>\n",
-       "      <th>disponibilité_de_calorie_en_kcal/population/an</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Arménie</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2951740</td>\n",
-       "      <td>300959410.40</td>\n",
-       "      <td>109850184.80</td>\n",
-       "      <td>439400739184.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Arménie</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>2957730</td>\n",
-       "      <td>296837782.80</td>\n",
-       "      <td>108345790.72</td>\n",
-       "      <td>433383162888.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>37172000</td>\n",
-       "      <td>2142965800.00</td>\n",
-       "      <td>782182517.00</td>\n",
-       "      <td>3128730068000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>38041750</td>\n",
-       "      <td>2132620505.00</td>\n",
-       "      <td>778406484.32</td>\n",
-       "      <td>3113625937300.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Albanie</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2883000</td>\n",
-       "      <td>325346550.00</td>\n",
-       "      <td>118751490.75</td>\n",
-       "      <td>475005963000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>361</th>\n",
-       "      <td>276</td>\n",
-       "      <td>Soudan</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>41802000</td>\n",
-       "      <td>3142256340.00</td>\n",
-       "      <td>1146923564.10</td>\n",
-       "      <td>4587694256400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>276</td>\n",
-       "      <td>Soudan</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>42813240</td>\n",
-       "      <td>3224265104.40</td>\n",
-       "      <td>1176856763.11</td>\n",
-       "      <td>4707427052424.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>363</th>\n",
-       "      <td>277</td>\n",
-       "      <td>Soudan du Sud</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>11062110</td>\n",
-       "      <td>709191872.10</td>\n",
-       "      <td>258855033.32</td>\n",
-       "      <td>1035420133266.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>351</td>\n",
-       "      <td>Chine</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1459378000</td>\n",
-       "      <td>152665532580.00</td>\n",
-       "      <td>55722919391.70</td>\n",
-       "      <td>222891677566800.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>365</th>\n",
-       "      <td>351</td>\n",
-       "      <td>Chine</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>1465634160</td>\n",
-       "      <td>155137375836.00</td>\n",
-       "      <td>56625142180.14</td>\n",
-       "      <td>226500568720560.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>366 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     code_zone_(fao)           zone  année  population  \\\n",
-       "0                  1        Arménie   2018     2951740   \n",
-       "1                  1        Arménie   2019     2957730   \n",
-       "2                  2    Afghanistan   2018    37172000   \n",
-       "3                  2    Afghanistan   2019    38041750   \n",
-       "4                  3        Albanie   2018     2883000   \n",
-       "..               ...            ...    ...         ...   \n",
-       "361              276         Soudan   2018    41802000   \n",
-       "362              276         Soudan   2019    42813240   \n",
-       "363              277  Soudan du Sud   2019    11062110   \n",
-       "364              351          Chine   2018  1459378000   \n",
-       "365              351          Chine   2019  1465634160   \n",
-       "\n",
-       "     disponibilité_de_protéines_en_g/population/jour  \\\n",
-       "0                                       300959410.40   \n",
-       "1                                       296837782.80   \n",
-       "2                                      2142965800.00   \n",
-       "3                                      2132620505.00   \n",
-       "4                                       325346550.00   \n",
-       "..                                               ...   \n",
-       "361                                    3142256340.00   \n",
-       "362                                    3224265104.40   \n",
-       "363                                     709191872.10   \n",
-       "364                                  152665532580.00   \n",
-       "365                                  155137375836.00   \n",
-       "\n",
-       "     disponibilité_de_protéines_en_kg/population/an  \\\n",
-       "0                                      109850184.80   \n",
-       "1                                      108345790.72   \n",
-       "2                                      782182517.00   \n",
-       "3                                      778406484.32   \n",
-       "4                                      118751490.75   \n",
-       "..                                              ...   \n",
-       "361                                   1146923564.10   \n",
-       "362                                   1176856763.11   \n",
-       "363                                    258855033.32   \n",
-       "364                                  55722919391.70   \n",
-       "365                                  56625142180.14   \n",
-       "\n",
-       "     disponibilité_de_calorie_en_kcal/population/an  \n",
-       "0                                   439400739184.00  \n",
-       "1                                   433383162888.00  \n",
-       "2                                  3128730068000.00  \n",
-       "3                                  3113625937300.00  \n",
-       "4                                   475005963000.00  \n",
-       "..                                              ...  \n",
-       "361                                4587694256400.00  \n",
-       "362                                4707427052424.00  \n",
-       "363                                1035420133266.00  \n",
-       "364                              222891677566800.00  \n",
-       "365                              226500568720560.00  \n",
-       "\n",
-       "[366 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 764,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pd\u001b[39m.\u001b[39moptions\u001b[39m.\u001b[39mdisplay\u001b[39m.\u001b[39mfloat_format \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m{:.2f}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat\n\u001b[1;32m      2\u001b[0m df_filtre \u001b[39m=\u001b[39m df_dispo[[\u001b[39m\"\u001b[39m\u001b[39mcode_zone_(fao)\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mzone\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mannée\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mdisponibilité_de_protéines_en_quantité_(g/personne/jour)\u001b[39m\u001b[39m\"\u001b[39m , \u001b[39m\"\u001b[39m\u001b[39mpopulation\u001b[39m\u001b[39m\"\u001b[39m]]\n\u001b[1;32m      3\u001b[0m df_agrege \u001b[39m=\u001b[39m df_filtre\u001b[39m.\u001b[39mgroupby([\u001b[39m\"\u001b[39m\u001b[39mcode_zone_(fao)\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mzone\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mannée\u001b[39m\u001b[39m\"\u001b[39m , \u001b[39m\"\u001b[39m\u001b[39mpopulation\u001b[39m\u001b[39m\"\u001b[39m ])\u001b[39m.\u001b[39msum()\u001b[39m.\u001b[39mreset_index()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
